--- a/client/jay-task-manager/src/styles.css
+++ b/client/jay-task-manager/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,5 +21,13 @@ input {
 }
 
 .submit-task {
-  @apply text-dark-blue hover:text-white border border-dark-blue hover:bg-dark-blue focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-green-500 dark:text-green-500 dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800;
+  @apply text-dark-blue hover:text-white border border-dark-blue hover:bg-slate-700 focus:ring-4 focus:outline-none focus:bg-slate-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-green-500 dark:text-green-500 dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800;
+}
+
+.task {
+  @apply p-4 m-5px overflow-x-hidden rounded-md cursor-pointer text-white bg-slate-700 items-center text-lg;
+}
+
+.completed-task {
+  @apply line-through decoration-1 decoration-slate-300 decoration-solid;
 }
