--- a/client/jay-task-manager/src/styles.css
+++ b/client/jay-task-manager/src/styles.css
@@ -17,6 +17,9 @@
   .w-100px {
     width: 100px;
   }
+  .border-b-3 {
+    border-bottom-width: 3px;
+  }
 }
 
 body {
@@ -36,7 +39,7 @@ input {
 }
 
 .submit-task {
-  @apply text-dark-blue hover:text-white border border-dark-blue hover:bg-slate-700 focus:ring-4 focus:outline-none focus:bg-slate-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-green-500 dark:text-green-500 dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800;
+  @apply text-dark-blue hover:text-white border border-dark-blue hover:bg-slate-700 focus:ring-4 focus:outline-none focus:bg-slate-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-8 dark:hover:text-white dark:hover:bg-green-600 dark:focus:ring-green-800;
 }
 
 .task {
@@ -58,10 +61,14 @@ input {
 .completed-task {
   @apply line-through decoration-2 decoration-slate-300 decoration-solid;
 }
-.selected {
-  @apply text-white bg-gray-400;
-}
+
 .tab-btn {
-  /* @apply p-10 text-lg text-blueish-gray cursor-pointer bg-white border-none w-100px; */
   @apply mx-2.5 my-0  p-2.5 text-sm cursor-pointer bg-white text-blueish-gray border-none;
+}
+
+.tab-btn.selected {
+  @apply border-b-3 text-blueish-gray font-bold border-black border-solid;
+}
+.tab-btn:hover {
+  @apply border-b-3 text-black border-solid border-black;
 }
